--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -75,51 +75,8 @@
        "      <td>1</td>\n",
        "      <td>Infubinol</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z969</th>\n",
-       "      <td>25</td>\n",
-       "      <td>63.145652</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Naftisol</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z969</th>\n",
-       "      <td>30</td>\n",
-       "      <td>65.841013</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Naftisol</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z969</th>\n",
-       "      <td>35</td>\n",
-       "      <td>69.176246</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Naftisol</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z969</th>\n",
-       "      <td>40</td>\n",
-       "      <td>70.314904</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Naftisol</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z969</th>\n",
-       "      <td>45</td>\n",
-       "      <td>73.867845</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Naftisol</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1906 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -129,18 +86,10 @@
        "a203              5           48.508468                 0  Infubinol\n",
        "a203             10           51.852437                 1  Infubinol\n",
        "a203             15           52.777870                 1  Infubinol\n",
-       "a203             20           55.173336                 1  Infubinol\n",
-       "...             ...                 ...               ...        ...\n",
-       "z969             25           63.145652                 2   Naftisol\n",
-       "z969             30           65.841013                 3   Naftisol\n",
-       "z969             35           69.176246                 4   Naftisol\n",
-       "z969             40           70.314904                 4   Naftisol\n",
-       "z969             45           73.867845                 4   Naftisol\n",
-       "\n",
-       "[1906 rows x 4 columns]"
+       "a203             20           55.173336                 1  Infubinol"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +99,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from bokeh.plotting import figure, output_file, show\n",
+    "import bokeh.plotting as bp#import figure, output_file, show\n",
     "\n",
     "# Hide warning messages in notebook\n",
     "import warnings\n",
@@ -169,7 +118,7 @@
     "df = clinic_df.set_index('Mouse ID').join(mouse_df.set_index('Mouse ID'))\n",
     "# Display the data table for preview\n",
     "\n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -181,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +234,7 @@
        "[100 rows x 1 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +354,7 @@
        "[100 rows x 1 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -437,21 +386,13 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
+       "    .dataframe thead th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"10\" halign=\"left\">Tumor Volume (mm3)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th>Drug</th>\n",
        "      <th>Capomulin</th>\n",
        "      <th>Ceftamin</th>\n",
@@ -549,34 +490,32 @@
        "</div>"
       ],
       "text/plain": [
-       "          Tumor Volume (mm3)                                              \\\n",
-       "Drug               Capomulin   Ceftamin  Infubinol   Ketapril   Naftisol   \n",
-       "Timepoint                                                                  \n",
-       "0                  45.000000  45.000000  45.000000  45.000000  45.000000   \n",
-       "5                  44.266086  46.503051  47.062001  47.389175  46.796098   \n",
-       "10                 43.084291  48.285125  49.403909  49.582269  48.694210   \n",
-       "15                 42.064317  50.094055  51.296397  52.399974  50.933018   \n",
-       "20                 40.716325  52.157049  53.197691  54.920935  53.644087   \n",
+       "Drug       Capomulin   Ceftamin  Infubinol   Ketapril   Naftisol    Placebo  \\\n",
+       "Timepoint                                                                     \n",
+       "0          45.000000  45.000000  45.000000  45.000000  45.000000  45.000000   \n",
+       "5          44.266086  46.503051  47.062001  47.389175  46.796098  47.125589   \n",
+       "10         43.084291  48.285125  49.403909  49.582269  48.694210  49.423329   \n",
+       "15         42.064317  50.094055  51.296397  52.399974  50.933018  51.359742   \n",
+       "20         40.716325  52.157049  53.197691  54.920935  53.644087  54.364417   \n",
        "\n",
-       "                                                                  \n",
-       "Drug         Placebo   Propriva   Ramicane   Stelasyn  Zoniferol  \n",
-       "Timepoint                                                         \n",
-       "0          45.000000  45.000000  45.000000  45.000000  45.000000  \n",
-       "5          47.125589  47.248967  43.944859  47.527452  46.851818  \n",
-       "10         49.423329  49.101541  42.531957  49.463844  48.689881  \n",
-       "15         51.359742  51.067318  41.495061  51.529409  50.779059  \n",
-       "20         54.364417  53.346737  40.238325  54.067395  53.170334  "
+       "Drug        Propriva   Ramicane   Stelasyn  Zoniferol  \n",
+       "Timepoint                                              \n",
+       "0          45.000000  45.000000  45.000000  45.000000  \n",
+       "5          47.248967  43.944859  47.527452  46.851818  \n",
+       "10         49.101541  42.531957  49.463844  48.689881  \n",
+       "15         51.067318  41.495061  51.529409  50.779059  \n",
+       "20         53.346737  40.238325  54.067395  53.170334  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Minor Data Munging to Re-Format the Data Frames\n",
-    "tumor_reponse_df_unstacked = tumor_reponse_df.unstack(level = 'Drug')\n",
-    "tumor_reponse_sem_unstacked = tumor_reponse_sem.unstack(level = 'Drug')\n",
+    "tumor_reponse_df_unstacked = tumor_reponse_df.unstack(level = 'Drug')['Tumor Volume (mm3)']\n",
+    "tumor_reponse_sem_unstacked = tumor_reponse_sem.unstack(level = 'Drug')['Tumor Volume (mm3)']\n",
     "\n",
     "# Preview that Reformatting worked\n",
     "tumor_reponse_df_unstacked.head()\n"
@@ -584,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -602,21 +541,13 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
+       "    .dataframe thead th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"10\" halign=\"left\">Tumor Volume (mm3)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th>Drug</th>\n",
        "      <th>Capomulin</th>\n",
        "      <th>Ceftamin</th>\n",
@@ -714,26 +645,24 @@
        "</div>"
       ],
       "text/plain": [
-       "          Tumor Volume (mm3)                                          \\\n",
-       "Drug               Capomulin  Ceftamin Infubinol  Ketapril  Naftisol   \n",
-       "Timepoint                                                              \n",
-       "0                   0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "5                   0.448593  0.164505  0.235102  0.264819  0.202385   \n",
-       "10                  0.702684  0.236144  0.282346  0.357421  0.319415   \n",
-       "15                  0.838617  0.332053  0.357705  0.580268  0.444378   \n",
-       "20                  0.909731  0.359482  0.476210  0.726484  0.595260   \n",
+       "Drug       Capomulin  Ceftamin  Infubinol  Ketapril  Naftisol   Placebo  \\\n",
+       "Timepoint                                                                 \n",
+       "0           0.000000  0.000000   0.000000  0.000000  0.000000  0.000000   \n",
+       "5           0.448593  0.164505   0.235102  0.264819  0.202385  0.218091   \n",
+       "10          0.702684  0.236144   0.282346  0.357421  0.319415  0.402064   \n",
+       "15          0.838617  0.332053   0.357705  0.580268  0.444378  0.614461   \n",
+       "20          0.909731  0.359482   0.476210  0.726484  0.595260  0.839609   \n",
        "\n",
-       "                                                             \n",
-       "Drug        Placebo  Propriva  Ramicane  Stelasyn Zoniferol  \n",
-       "Timepoint                                                    \n",
-       "0          0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "5          0.218091  0.231708  0.482955  0.239862  0.188950  \n",
-       "10         0.402064  0.376195  0.720225  0.433678  0.263949  \n",
-       "15         0.614461  0.466109  0.770432  0.493261  0.370544  \n",
-       "20         0.839609  0.555181  0.786199  0.621889  0.533182  "
+       "Drug       Propriva  Ramicane  Stelasyn  Zoniferol  \n",
+       "Timepoint                                           \n",
+       "0          0.000000  0.000000  0.000000   0.000000  \n",
+       "5          0.231708  0.482955  0.239862   0.188950  \n",
+       "10         0.376195  0.720225  0.433678   0.263949  \n",
+       "15         0.466109  0.770432  0.493261   0.370544  \n",
+       "20         0.555181  0.786199  0.621889   0.533182  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,14 +674,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bohek' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-63-e5efc31f2fa5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0moutput_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'output.html'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0msource\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbohek\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplotting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mColumnDataSource\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtumor_reponse_df_unstacked\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m \u001b[1;34m'Tumor Response to Treatment'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Time (Days)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Tumor Volume (mm3)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mline_width\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msource\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msource\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'bohek' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Generate the Plot (with Error Bars)\n",
+    "output_file('output.html')\n",
     "\n",
+    "source = bohek.plotting.ColumnDataSource(tumor_reponse_df_unstacked)\n",
+    "p = figure(title= 'Tumor Response to Treatment')\n",
+    "p = line(x='Time (Days)', y='Tumor Volume (mm3)', line_width=2, source=source)\n",
     "# Save the Figure\n",
-    "\n"
+    "save(p)\n",
+    "show(p)"
    ]
   },
   {
