Creating list comprehension for error bars

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -95,12 +95,13 @@
     }
    ],
    "source": [
-    "## color_gen function was taken from innek.com programming tutorial ##\n",
+    "## color_gen function was taken from inneka.com programming tutorial ##\n",
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import bokeh.plotting as bp\n",
     "from bokeh.palettes import Category10\n",
+    "from bokeh.models import ColumnDataSource, Whisker\n",
     "import itertools\n",
     "\n",
     "# Hide warning messages in notebook\n",
@@ -1374,6 +1375,27 @@
     "\n",
     "y_list = df.Drug.unique()\n",
     "\n",
+    "#calculate the upper and lower for the error bars\n",
+    "upper = {\n",
+    "         'Capomulin':[], 'Ceftamin':[],'Infubinol':[],'Ketapril':[],'Naftisol':[],\n",
+    "         'Placebo':[], 'Propriva': [], 'Ramicane': [], 'Stelasyn':[], 'Zoniferol':[]\n",
+    "        }\n",
+    "\n",
+    "lower = {\n",
+    "         'Capomulin':[], 'Ceftamin':[],'Infubinol':[],'Ketapril':[],'Naftisol':[],\n",
+    "         'Placebo':[], 'Propriva': [], 'Ramicane': [], 'Stelasyn':[], 'Zoniferol':[]\n",
+    "        }\n",
+    "\n",
+    "base = {\n",
+    "        'Capomulin':[], 'Ceftamin':[],'Infubinol':[],'Ketapril':[],'Naftisol':[],\n",
+    "        'Placebo':[], 'Propriva': [], 'Ramicane': [], 'Stelasyn':[], 'Zoniferol':[]\n",
+    "        }\n",
+    "\n",
+    "    lower.append(tumor_reponse_df_unstacked[y_list[i]].values - tumor_reponse_sem_unstacked[y_list[i]].values)\n",
+    "    upper.append(tumor_reponse_df_unstacked[y_list[i]].values + tumor_reponse_sem_unstacked[y_list[i]].values)\n",
+    "    base.append(tumor_reponse_df_unstacked.[y_list[i]].index.values)\n",
+    "    \n",
+    "\n",
     "source_error = bp.ColumnDataSource(tumor_reponse_sem_unstacked)\n",
     "source = bp.ColumnDataSource(tumor_reponse_df_unstacked)\n",
     "\n",
@@ -1383,6 +1405,8 @@
     "i = 0\n",
     "for i, c in zip(range(len(y_list)), color):\n",
     "    fig.line('Timepoint', y_list[i], line_width=2, source=tumor_reponse_df_unstacked, color = c)\n",
+    "    \n",
+    "    fig.add_layout(Whisker(source=source_error, upper = 'upper', lower='lower', base = 'base', line_width = 2))\n",
     "\n",
     "bp.output_file('Tumor_Response.html', title='Tumor Response to Treatment') #to show in another window.\n",
     "bp.save(fig)\n",
